--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="price">Price</string>
     <string name="rating">Rating:</string>
     <string name="specifications">Specifications</string>
+    <string name="price_comparing">Price Comparing</string>
     <string name="main_specifications">Main specifications:</string>
     <string name="rear_camera">Rear Camera</string>
     <string name="front_camera">Front Camera</string>
@@ -43,5 +44,5 @@
     <string name="show">Show</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="search">пошук</string>
+    <string name="search">search</string>
 </resources>
